--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,9 @@
-titanium.platform=/Users/pierreexygy/Library/Application Support/Titanium/mobilesdk/osx/3.1.1.GA/android
-android.platform=/Applications/adt-bundle-mac-x86_64-20130522/sdk/platforms/android-10
-google.apis=/Applications/adt-bundle-mac-x86_64-20130522/sdk/add-ons/addon-google_apis-google-10
-android.ndk=/Applications/adt-bundle-mac-x86_64-20130522/android-ndk-r8e
+titanium.sdk=/Library/Application\ Support/Titanium/
+titanium.os=osx
+titanium.version=6.0.1.GA
+android.sdk=/opt/android-sdk
+
+titanium.platform=${user.home}/Library/Application Support/Titanium/mobilesdk/osx/6.0.1.GA/android
+android.platform=/opt/android-sdk/platforms/android-23
+google.apis=/opt/android-sdk/add-ons/addon-google_apis-google-23
+android.ndk=/opt/android-ndk
